# training-blueprint

./: Cargo.toml  README.md
.github/workflows/: release.yml
contracts/: remappings.txt
contracts/cache/: solidity-files-cache.json  test-failures
contracts/src/: DistributedTrainingBSM.sol
contracts/test/: DistributedTrainingBSM.t.sol
operator/: Cargo.toml
operator/src/: checkpoint.rs  config.rs  coordinator.rs  demo.rs  health.rs  lib.rs  main.rs  network.rs  qos.rs  server.rs  training.rs  verification.rs
operator/tests/: gossip_sync.rs
training-adapter/: main.py  test-data.jsonl  test-train.py
